Fix harry position on smaller screens

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -15,7 +15,7 @@ html, body {
   position: fixed;
   top: auto;
   bottom: 28.25%;
-  left: 100px;
+  left: 300px;
   z-index: 999;
 }
 
@@ -41,8 +41,8 @@ html, body {
 
 .content-wrapper {
   position: fixed;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
 
